# stock-strategies-only

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
api/services/: ai_generator.py
stock_strategies/: config.py  data.py  data_us.py  evaluate.py  evaluate_us.py  indicators.py  market.py  night_session.py  notify.py  performance.py  sheet.py
stock_strategies/factors/: growth.py
tests/: test_evaluate_us.py
tests/factors/: test_growth.py
